[bdist_wheel]
universal = 1

[metadata]
name = ansible-collections.python.dist.boo
url = https://github.com/webknjaz/ansible-collection-python-dist-boo
project_urls =
    Bug Tracker = https://github.com/webknjaz/ansible-collection-python-dist-boo/issues
    CI: GitHub = https://github.com/webknjaz/ansible-collection-python-dist-boo/actions
    Source Code = https://github.com/webknjaz/ansible-collection-python-dist-boo
description = Example Ansible Collection containing 'boo' Ansible module
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sviatoslav Sydorenko (@webknjaz)
author_email = wk+github/ansible@sydorenko.org.ua
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha

    Environment :: Console
    Environment :: Other Environment

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

    Operating System :: OS Independent
    Operating System :: POSIX

    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control
    Topic :: Software Development :: Version Control :: Git

    Topic :: System :: Networking

    Topic :: Utilities
keywords =
    Ansible
    Ansible Collections
    Ansible Module

[options]
python_requires = >=3.7
package_dir =
    = .
packages = find_namespace:
zip_safe = True
include_package_data = True

# These are required in actual runtime:
install_requires =
    ansible
    six

[options.packages.find]
where = .
